code input bind

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -89,10 +89,7 @@
                                     <div class="col-12">
                                         <code-input
                                         (codeCompleted)="onCodeCompleted($event)"
-                                        style="direction: ltr;"
-                                        [initialFocusField]="0"
-                                        [isCodeHidden]="false"
-                                        [codeLength]="6">
+                                        style="direction: ltr;">
                                          </code-input>
                                     </div>
                                 </div>
