--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="sidebar-container text-center">
+
+    <div class="sidebar-container text-center  h-100">
         <ng-container>
             <div class="logo-image my-3">
                 <img src="assets/logo.png" alt="logo" width="90px">
@@ -11,4 +11,3 @@
         </ng-container>
         
     </div>
-</div>
