--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -30,7 +30,7 @@ a{
     background-color: #2A2A2C;
     background-image: url(/assets/building.png);
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 100%;
     background-position: bottom;
 }
 
@@ -142,5 +142,14 @@ button{
 
     .p-inputgroup img{
         width: 20px;
+    }
+}
+
+@media only screen and (min-width : 998px) and (max-width : 1600px) {
+    .login-container {
+        width: 500px;
+        max-width: 100%;
+        height: 560px;
+        padding: 20px 40px;
     }
 }
