--- a/src/app/shared/home/home.component.css
+++ b/src/app/shared/home/home.component.css
@@ -1,6 +1,6 @@
 .home-container{
-    padding: 45px 30px;
-    overflow-x: hidden;
+    padding: 30px;
+    overflow: hidden;
     width: 100%;
 }
 
