--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row home-container h-100">
-    <div class="col-sm-0 col-md-0 col-lg-2 sidebar">
+    <div class="col-sm-0 col-md-0 col-lg-2 sidebar h-100">
         <app-sidebar></app-sidebar>
     </div>
 
