--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -149,7 +149,16 @@ button{
     .login-container {
         width: 500px;
         max-width: 100%;
-        height: 560px;
+        height: 470px;
         padding: 20px 40px;
+    }
+
+    .p-inputgroup{
+        height: 50px;
+        margin-top: 15px;
+    }
+
+    .mt-70{
+        margin-top: 10px !important;
     }
 }
