--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,13 +1,13 @@
 
     <div class="sidebar-container text-center  h-100">
         <ng-container>
-            <div class="logo-image my-3">
+            <div class="logo-image py-3">
                 <img src="assets/logo.png" alt="logo" width="90px">
             </div>
 
             <hr>
 
-            <p-menu  class="mx-auto d-flex justify-content-center bg-transparent" [model]="item"></p-menu>
+            <p-menu [ngStyle]="{'height' : (menuBarHeight) ? (menuBarHeight) +'px' : 100+'%'}"  class="mx-auto d-flex justify-content-center bg-transparent" [model]="item"></p-menu>
         </ng-container>
         
     </div>
