--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -3,9 +3,9 @@
         <app-sidebar></app-sidebar>
     </div>
 
-    <div class="col-sm-12 col-md-12 col-lg-10 content">
+    <div class="col-sm-12 col-md-12 col-lg-10 content h-100">
         <app-topbar class="text-center"></app-topbar>
-        <div class="scroll">
+        <div class="">
             <div class="container-fluid">
                 <router-outlet></router-outlet>
             </div>
