--- a/src/app/pages/category/components/subcategory/subcategory.component.html
+++ b/src/app/pages/category/components/subcategory/subcategory.component.html
@@ -10,13 +10,13 @@
 </div>
 
 <div *ngIf="allsubCategoryList?.length" class="row mt-20">
-    <div *ngFor="let item of allsubCategoryList" class="col-12 subCategory-container my-4 d-flex justify-content-between align-items-center">
+    <div *ngFor="let item of allsubCategoryList" class="col-12 subCategory-container my-2 d-flex justify-content-between align-items-center">
         <div class="subCategory-desc d-flex align-items-center">
             <p class="number Tajawal-Medium fs-20 my-0 ">{{item.commission}}</p>
             <p class="title Tajawal-Medium fs-28 my-0 me-3">{{item.title}}</p>
         </div>
         <div class="subCategory-btns d-flex align-items-center">
-            <p-inputSwitch (onChange)="handleShowCard($event,item)" [(ngModel)]="item.is_active"></p-inputSwitch>
+            <button class="delete-btn" (click)="handleShowCard($event,item)"><i class="pi pi-trash fs-4"></i></button>
             <button (click)="view.emit('edit subCategory'); subCategoryId.emit(item.id);parentId.emit(id)" class="edit-btn Tajawal-Medium fs-20 me-3">تعديل</button>
         </div>
     </div>
