--- a/src/app/shared/topbar/topbar.component.css
+++ b/src/app/shared/topbar/topbar.component.css
@@ -4,6 +4,9 @@
     background: #FDFDFD 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #272D3B33;
     border-radius: 20px;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 
 .navbar .search{
@@ -61,4 +64,5 @@ input:active{
     background: #F7F7F7 0% 0% no-repeat padding-box;
     box-shadow: 0px 10px 20px #272D3B39;
     border-radius: 10px;
+    left: 0;
 }
