--- a/src/styles.css
+++ b/src/styles.css
@@ -133,9 +133,9 @@ code-input input{
 .ngx-pagination{
     position: absolute !important ;
     left: 0 !important ;
-    bottom: 15px !important ;
+    bottom: 5px !important ;
     width: max-content !important ;
-    height: 38px !important;
+    height: 28px !important;
     border: 1px solid black !important ;
     margin: 0 25px !important ;
     border-radius: 20px !important ;
@@ -149,11 +149,14 @@ code-input input{
 .ngx-pagination .current {
     padding: 0.1875rem 0.625rem;
     background: #2A2A2C !important;
-    width: 25px !important;
-    height: 25px !important;
+    width: 18px !important;
+    height: 18px !important;
     border-radius: 50% !important;
     margin: 0 10px !important;
-    font-size: 12px;
+    font-size: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .ngx-pagination .pagination-next a:hover,
@@ -161,6 +164,12 @@ code-input input{
 .ngx-pagination li a:hover{
     color: black !important;
     border-radius: 50%;
+    width: 18px !important;
+    height: 18px !important;
+    font-size: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .ngx-pagination .pagination-previous:before, .ngx-pagination .pagination-next:after,
@@ -179,17 +188,21 @@ code-input input{
     color: white !important;
 }
 
+.ngx-pagination a{
+    font-size: 10px;
+}
+
 .pagination-previous,
 .pagination-next{
     background: #2A2A2C !important;
-    width: 25px !important;
-    height: 25px !important;
+    width: 18px !important;
+    height: 18px !important;
     border-radius: 50% !important;
     margin: 0 10px !important;
     display: flex !important;
     justify-content: center;
     align-items: center;
-    font-size: 12px;
+    font-size: 7px;
 }
 
 .p-inputswitch.p-inputswitch-checked:not(.p-disabled):hover .p-inputswitch-slider ,
@@ -197,6 +210,15 @@ code-input input{
 {
     background: black;
     
+}
+
+.swal2-cancel{
+    background-color: #B71212 !important;
+    width: 100px;
+}
+.swal2-confirm{
+    background-color: black !important;
+    width: 100px;
 }
 @media only screen and (min-width : 320px) and (max-width : 998px) {
     .fs-28{
@@ -231,16 +253,11 @@ code-input input{
 }
 
 @media only screen and (min-width : 998px) and (max-width : 1650px) {
-    .fs-28{
+
+    .fs-37,.fs-28,.fs-30{
         font-size: 22px;
     }
-    .fs-30{
-        font-size: 20px;
-    }
-    .fs-37{
-        font-size: 22px;
-    }
-    .fs-20{
+    .fs-20,.fs-25{
         font-size: 20px;
     }
 
